--- a/index.qmd
+++ b/index.qmd
@@ -85,11 +85,11 @@ investmentDAG.show()
 
 ### 1) Expected Value After 1 Flip
 
-TODO: Explain whether the expected value of your account balance after one flip is >, =, or < $30,000. What is the gain in expected value as a percentage of your buy-in? Does this simple analysis suggest you should buy-in to the game?
+What is the gain in expected value as a percentage of your buy-in? Does this simple analysis suggest you should buy-in to the game?
 
 ```{python}
 #| label: q1-expected-value-py
-#| echo: true
+#| echo: false
 
 # Compute EV after one flip in Python
 # Show calculation and brief explanation
@@ -103,11 +103,11 @@ print("This is less than $30,000, so you should not buy-in to the game based on 
 
 ### 2) Single Simulation Over Time (Narrative + Plot)
 
-Briefly narrate and visualize what happens to your account balance over the course of one run. Are you happy with the outcome? Why? or Why not?  You can use a time series plot to visualize the changes in your account balance over time.
+Following visualize and narrative explains what happens to account balance over the course of one run. 
 
 ```{python}
 #| label: q2-single-sim-py
-#| echo: true
+#| echo: false
 #| fig-cap: "Single simulation path of account balance"
 
 # Simulate one path from $30,000 over N periods
@@ -147,7 +147,7 @@ print(f"Final balance after {N} coin flips: ${balances[-1]:,.2f}")
 print(f"Change: ${balances[-1] - initial_balance:,.2f} ({((balances[-1] / initial_balance) - 1) * 100:.2f}%)")
 
 # Enhanced plot with stock market style and detailed styling
-fig, ax = plt.subplots(figsize=(10, 6))
+fig, ax = plt.subplots(figsize=(8, 5))
 # fig.patch.set_facecolor('#ffffff')
 
 # # Set background color
@@ -205,7 +205,7 @@ ax.annotate(f'${final_balance:,.0f}',
 # Enhanced formatting
 ax.set_xlabel('Coin Flip Number', fontsize=13, fontweight='bold', color='#2c3e50')
 ax.set_ylabel('Account Balance ($)', fontsize=13, fontweight='bold', color='#2c3e50')
-ax.set_title('Investment Simulation: Account Balance Over Coin Flips', fontsize=16, fontweight='bold')
+ax.set_title('Account Balance Over Coin Flips', fontsize=16, fontweight='bold')
 
 # Enhanced legend
 legend = ax.legend(loc='upper left', framealpha=0.95, fontsize=10.5, 
@@ -240,7 +240,7 @@ return_pct = ((final_balance / initial_balance) - 1) * 100
 loss_amount = initial_balance - final_balance
 ```
 
-#### Narrative Analysis
+
 
 ```{python}
 #| echo: false
@@ -249,14 +249,14 @@ loss_amount = initial_balance - final_balance
 outcome_assessment = "happy" if final_balance > initial_balance else ("unhappy" if final_balance < initial_balance else "neutral")
 
 if outcome_assessment == "happy":
-    assessment_text = "**✅ OUTCOME ASSESSMENT: I am HAPPY with this outcome.**"
-    reason_text = f"Reason: The investment grew from ${initial_balance:,.2f} to ${final_balance:,.2f}, representing a {return_pct:.2f}% return. This is a {return_pct:.2f}% profit on the initial investment. Despite the volatility shown in the graph (with gains and losses throughout), the final result shows a positive return, which meets the basic goal of earning more than what was initially invested."
+    assessment_text = "**✅ OUTCOME ASSESSMENT: I am HAPPY with this outcome. Its not profitable all time and its risky investment **"
+    reason_text = f"The investment grew from ${initial_balance:,.2f} to ${final_balance:,.2f}, representing a {return_pct:.2f}% return. This is a {return_pct:.2f}% profit on the initial investment. Despite the volatility shown in the graph (with gains and losses throughout), the final result shows a positive return, which meets the basic goal of earning more than what was initially invested."
 elif outcome_assessment == "unhappy":
     assessment_text = "**❌ OUTCOME ASSESSMENT: I am NOT HAPPY with this outcome.**"
-    reason_text = f"Reason: The investment decreased from ${initial_balance:,.2f} to ${final_balance:,.2f}, representing a {return_pct:.2f}% loss. This means I lost ${loss_amount:,.2f}. The simulation shows high volatility, with periods of gains followed by losses, but ultimately ending below the initial investment. This is a disappointing outcome as it represents a net loss rather than a gain."
+    reason_text = f"The investment decreased from ${initial_balance:,.2f} to ${final_balance:,.2f}, representing a {return_pct:.2f}% loss. This means I lost ${loss_amount:,.2f}. The simulation shows high volatility, with periods of gains followed by losses, but ultimately ending below the initial investment. This is a disappointing outcome as it represents a net loss rather than a gain."
 else:
     assessment_text = "**⚪ OUTCOME ASSESSMENT: I am NEUTRAL about this outcome.**"
-    reason_text = f"Reason: The investment ended exactly at ${initial_balance:,.2f}, representing no gain or loss. After {N} coin flips with significant volatility, breaking even is neither satisfying nor disappointing."
+    reason_text = f"The investment ended exactly at ${initial_balance:,.2f}, representing no gain or loss. After {N} coin flips with significant volatility, breaking even is neither satisfying nor disappointing."
 
 # Print the narrative as markdown
 print(f"""Starting with ${initial_balance:,.2f}, the simulation ran through {N} coin flips. Out of {N} flips, {num_gains} resulted in gains (heads: +50%) and {num_losses} resulted in losses (tails: -40%).
@@ -280,14 +280,14 @@ Visually and narratively describe the distribution of your account balance after
 
 ```{python}
 #| label: q3-dist-100-py
-#| echo: true
-#| fig-cap: "Distribution of final balances across 100 simulations"
+#| echo: false
 
 import numpy as np
 import matplotlib.pyplot as plt
 import matplotlib.ticker as ticker
 import seaborn as sns
 import pandas as pd
+from IPython.display import Markdown
 
 # Parameters
 starting_balance = 30000
@@ -354,63 +354,70 @@ plt.legend()
 plt.tight_layout()
 plt.show()
 
-# Print comprehensive statistics and narrative
-print("="*80)
-print("DISTRIBUTION ANALYSIS")
-print("="*80)
-print(f"\nSimulation Parameters:")
-print(f"  Initial investment: ${starting_balance:,}")
-print(f"  Number of coin flips: {N}")
-print(f"  Number of simulations: {n_simulations}")
+# Update below print statements as nicely formatted text using quarto
+# Display the narrative as Quarto-formatted markdown
+display(Markdown(f""" The following are the distribution analysis of the 100 simulations:
 
-print(f"\nDistribution Statistics:")
-print(f"  Mean final balance:      ${mean_balance:,.2f}")
-print(f"  Median final balance:    ${median_balance:,.2f}")
-print(f"  Standard deviation:      ${std_balance:,.2f}")
-print(f"  Minimum final balance:   ${min_balance:,.2f}")
-print(f"  Maximum final balance:   ${max_balance:,.2f}")
+**DISTRIBUTION ANALYSIS**
 
-print(f"\n" + "="*80)
-print("PROBABILITY OF FAVORABLE OUTCOMES")
-print("="*80)
-print(f"  P(final balance > ${starting_balance:,}):     {prob_above_buyin:.1%} ({np.sum(final_balances > starting_balance)}/{n_simulations} simulations)")
-print(f"  P(final balance ≥ ${2*starting_balance:,}):   {prob_double:.1%} ({np.sum(final_balances >= 2*starting_balance)}/{n_simulations} simulations)")
-print(f"  P(final balance ≥ ${starting_balance:,}):    {prob_break_even:.1%} (break-even or better)")
+Simulation Parameters:
 
-print(f"\n" + "="*80)
-print("NARRATIVE DESCRIPTION")
-print("="*80)
-print(f"\nAfter running {n_simulations} simulations of the investment game over {N} coin flips:")
-print(f"\n1. DISTRIBUTION CHARACTERISTICS:")
-print(f"   • The distribution is highly skewed with a long right tail")
-print(f"   • Mean balance (${mean_balance:,.2f}) is {'higher' if mean_balance > median_balance else 'lower'} than median (${median_balance:,.2f})")
-print(f"   • This indicates extreme outcomes: some simulations result in very high balances,")
-print(f"     while others result in significant losses")
-print(f"   • The wide range (${min_balance:,.2f} to ${max_balance:,.2f}) shows high variability")
+* Initial investment: ${starting_balance:,}
+* Number of coin flips: {N}
+* Number of simulations: {n_simulations}
 
-print(f"\n2. PROBABILITY OF HAPPY OUTCOMES:")
-print(f"   • After investing ${starting_balance:,}, the probability of ending with MORE than your initial")
-print(f"     investment is {prob_above_buyin:.1%}")
-print(f"   • This means in {np.sum(final_balances > starting_balance)} out of {n_simulations} simulations,")
-print(f"     you would be profitable")
-print(f"   • The probability of at least DOUBLING your money is {prob_double:.1%}")
+**Distribution Statistics:**
 
-print(f"\n3. RISK ASSESSMENT:")
+* Mean final balance: ${mean_balance:,.2f}
+* Median final balance: ${median_balance:,.2f}
+* Standard deviation: ${std_balance:,.2f}
+* Minimum final balance: ${min_balance:,.2f}
+* Maximum final balance: ${max_balance:,.2f}
+
+**Probability of favorable outcomes:**
+
+* P(final balance > ${starting_balance:,}): {prob_above_buyin:.1%} ({np.sum(final_balances > starting_balance)}/{n_simulations} simulations)
+* P(final balance ≥ ${2*starting_balance:,}): {prob_double:.1%} ({np.sum(final_balances >= 2*starting_balance)}/{n_simulations} simulations)
+* P(final balance ≥ ${starting_balance:,}): {prob_break_even:.1%} (break-even or better)
+
+"""))
+
+
+risk_assessment = ""
 if prob_above_buyin < 0.5:
-    print(f"   • Less than half of simulations result in profit - this is a HIGH RISK investment")
+    risk_assessment = "Less than half of simulations result in profit - this is a HIGH RISK investment"
 elif prob_above_buyin < 0.6:
-    print(f"   • Slightly more than half result in profit - this is a MODERATE RISK investment")
+    risk_assessment = "Slightly more than half result in profit - this is a MODERATE RISK investment"
 else:
-    print(f"   • More than half of simulations result in profit - but still risky due to volatility")
+    risk_assessment = "More than half of simulations result in profit - but still risky due to volatility"
 
-print(f"   • The high standard deviation (${std_balance:,.2f}) indicates significant uncertainty")
-print(f"   • You could lose as much as ${starting_balance - min_balance:,.2f} or gain as much as ${max_balance - starting_balance:,.2f}")
+# Display the narrative as Quarto-formatted markdown
+display(Markdown(f"""
+After running {n_simulations} simulations of the investment game over {N} coin flips:
 
-print(f"\n4. CONCLUSION:")
-print(f"   • If you define 'happy outcomes' as finishing with more than your ${starting_balance:,} investment,")
-print(f"     the probability is {prob_above_buyin:.1%}")
-print(f"   • However, the extreme variability means outcomes are highly unpredictable")
-print("="*80)
+**1. DISTRIBUTION CHARACTERISTICS:**
+
+* The distribution is highly skewed with a long right tail
+* Mean balance (${mean_balance:,.2f}) is {'higher' if mean_balance > median_balance else 'lower'} than median (${median_balance:,.2f})
+* This indicates extreme outcomes: some simulations result in very high balances, while others result in significant losses
+* The wide range (${min_balance:,.2f} to ${max_balance:,.2f}) shows high variability
+
+**2. PROBABILITY OF HAPPY OUTCOMES:**
+
+* After investing ${starting_balance:,}, the probability of ending with **MORE** than your initial investment is {prob_above_buyin:.1%}
+* This means in {np.sum(final_balances > starting_balance)} out of {n_simulations} simulations, you would be profitable
+* The probability of at least DOUBLING your money is {prob_double:.1%}
+
+**3. RISK ASSESSMENT:**
+
+* {risk_assessment}
+* The high standard deviation (${std_balance:,.2f}) indicates significant uncertainty
+* You could lose as much as ${starting_balance - min_balance:,.2f} or gain as much as ${max_balance - starting_balance:,.2f}
+
+**4. CONCLUSION:**
+If you define 'happy outcomes' as finishing with more than your ${starting_balance:,} investment, the probability is {prob_above_buyin:.1%}
+However, the extreme variability means outcomes are highly unpredictable
+"""))
 ```
 
 ### 4) Probability Balance > $30,000 After 35 Coin Flips (Original Game)
@@ -419,7 +426,7 @@ Report the probability estimate and interpret its practical meaning.
 
 ```{python}
 #| label: q4-prob-original-py
-#| echo: true
+#| echo: false
 
 # Print number of successes and total simulations
 success_count = (results_df['Final Balance'] > starting_balance).sum()
@@ -432,11 +439,11 @@ print(f"This means that in {np.sum(final_balances > starting_balance)} out of {n
 
 ### 5) Modified Strategy (Bet Exactly 50% Each Round)
 
-Instead of having the full balance at risk with each coin flip, assume only 50% of your balance is gambled each round. Compare this to the original game. Which is riskier? Which has better upside?
+Instead of having the full balance at risk with each coin flip, assume only 50% of  balance is gambled each round. Compare this to the original game. Which is riskier? Which has better upside?
 
 ```{python}
 #| label: q5-modified-50pct-py
-#| echo: true
+#| echo: false
 #| fig-cap: "Comparison of original and modified strategy distributions (bet 50% each round)"
 
 import pandas as pd
@@ -513,7 +520,7 @@ mod_max = np.max(modified_balances)
 
 # --- Plotting ---
 sns.set(style="whitegrid")
-fig, ax = plt.subplots(figsize=(10, 6))
+fig, ax = plt.subplots(figsize=(8, 5))
 
 # Background shading
 x_min = min(min(original_df['Final Balance']), min(modified_df['Final Balance']), starting_balance * 0.5)
@@ -545,59 +552,73 @@ plt.legend(loc='upper right', fontsize=10)
 plt.tight_layout()
 plt.show()
 
-# Print comparison statistics
-print("="*80)
-print("COMPARISON: Original vs Modified Strategy (50% at Risk)")
-print("="*80)
-print(f"\nORIGINAL STRATEGY (Full Balance at Risk):")
-print(f"  Mean final balance:        ${orig_mean:,.2f}")
-print(f"  Median final balance:      ${orig_median:,.2f}")
-print(f"  Standard deviation:        ${orig_std:,.2f}")
-print(f"  Minimum:                   ${orig_min:,.2f}")
-print(f"  Maximum:                   ${orig_max:,.2f}")
-print(f"  P(final > ${starting_balance:,}):        {orig_prob_gain:.2%}")
-print(f"  Profitable simulations:    {np.sum(original_balances > starting_balance)}/{n_simulations}")
-
-print(f"\nMODIFIED STRATEGY (50% of Balance at Risk):")
-print(f"  Mean final balance:        ${mod_mean:,.2f}")
-print(f"  Median final balance:      ${mod_median:,.2f}")
-print(f"  Standard deviation:        ${mod_std:,.2f}")
-print(f"  Minimum:                   ${mod_min:,.2f}")
-print(f"  Maximum:                   ${mod_max:,.2f}")
-print(f"  P(final > ${starting_balance:,}):        {mod_prob_gain:.2%}")
-print(f"  Profitable simulations:    {np.sum(modified_balances > starting_balance)}/{n_simulations}")
-
-print(f"\nCOMPARISON:")
-print(f"  Mean difference:           ${mod_mean - orig_mean:,.2f}")
-print(f"  Std dev ratio (mod/orig):  {mod_std/orig_std:.2f}")
-print(f"  Max difference:            ${mod_max - orig_max:,.2f}")
-print(f"  Min difference:            ${mod_min - orig_min:,.2f}")
-print(f"  Probability gain diff:     {mod_prob_gain - orig_prob_gain:.2%}")
-
-print(f"\n" + "="*80)
-print("INTERPRETATION: Which is Riskier? Which has Better Upside?")
-print("="*80)
 if orig_std > mod_std:
-    print(f"  • The ORIGINAL strategy is RISKIER (std dev: ${orig_std:,.2f} vs ${mod_std:,.2f})")
-    print(f"    → Higher volatility means more uncertainty")
+    risk_text = f"""
+* The Original strategy is RISKIER (std dev: ${orig_std:,.2f} vs ${mod_std:,.2f})
+* Higher volatility means more uncertainty"""
+    
 else:
-    print(f"  • The MODIFIED strategy is RISKIER (std dev: ${mod_std:,.2f} vs ${orig_std:,.2f})")
-    print(f"    → Higher volatility means more uncertainty")
+    risk_text = f"""
+* The Modified strategy is RISKIER (std dev: ${mod_std:,.2f} vs ${orig_std:,.2f})
+* Higher volatility means more uncertainty"""
 
 if orig_max > mod_max:
-    print(f"  • The ORIGINAL strategy has BETTER UPSIDE (max: ${orig_max:,.2f} vs ${mod_max:,.2f})")
-    print(f"    → Can achieve much higher maximum returns")
+    upside_text = f"""
+* The Original strategy has BETTER UPSIDE (max: ${orig_max:,.2f} vs ${mod_max:,.2f})
+* Can achieve much higher maximum returns"""
+
 else:
-    print(f"  • The MODIFIED strategy has BETTER UPSIDE (max: ${mod_max:,.2f} vs ${orig_max:,.2f})")
-    print(f"    → Can achieve much higher maximum returns")
+    upside_text = f"""
+* The Modified strategy has BETTER UPSIDE (max: ${mod_max:,.2f} vs ${orig_max:,.2f})
+* Can achieve much higher maximum returns"""
 
-print(f"\n  • The modified strategy (50% at risk) has:")
-print(f"    - Lower risk per round (only 50% of balance exposed to coin flip)")
-print(f"    - More conservative approach (50% always kept safe)")
-print(f"    - Lower maximum potential but also lower minimum loss")
-print(f"    - Reduced volatility compared to full-risk strategy")
-print("="*80)
+summary_block = f"""
+### **Original vs Modified Strategy (50% at Risk)**
 
+#### Original Strategy (Full Balance at Risk)
+* Mean final balance: ${orig_mean:,.2f}
+* Median final balance: ${orig_median:,.2f}
+* Standard deviation: ${orig_std:,.2f}
+* Minimum: ${orig_min:,.2f}
+* Maximum: ${orig_max:,.2f}
+* P(final > ${starting_balance:,}): {orig_prob_gain:.2%}
+* Profitable simulations: {np.sum(original_balances > starting_balance)}/{n_simulations}
+
+#### Modified Strategy (50% of Balance at Risk)
+* Mean final balance: ${mod_mean:,.2f}
+* Median final balance: ${mod_median:,.2f}
+* Standard deviation: ${mod_std:,.2f}
+* Minimum: ${mod_min:,.2f}
+* Maximum: ${mod_max:,.2f}
+* P(final > ${starting_balance:,}): {mod_prob_gain:.2%}
+* Profitable simulations: {np.sum(modified_balances > starting_balance)}/{n_simulations}
+
+#### **Comparison**
+* Mean difference: ${mod_mean - orig_mean:,.2f}
+* Std dev ratio (mod/orig): {mod_std/orig_std:.2f}
+* Max difference: ${mod_max - orig_max:,.2f}
+* Min difference: ${mod_min - orig_min:,.2f}
+* Probability gain diff: {mod_prob_gain - orig_prob_gain:.2%}
+
+#### **Interpretation: Which is Riskier? Which has Better Upside?**
+**The Original Strategy (Full Balance at Risk) has:**
+{risk_text}
+{upside_text}
+"""
+
+modified_bullet_block = """
+**The Modified Strategy (50% at risk) has:**
+
+* Lower risk per round (only 50% of balance exposed to coin flip)
+
+* More conservative approach (50% always kept safe)
+
+* Lower maximum potential but also lower minimum loss
+* Reduced volatility compared to full-risk strategy
+"""
+
+display(Markdown(summary_block))
+display(Markdown(modified_bullet_block))
 ```
 
 #### Interpretation of the distributions
@@ -610,17 +631,20 @@ orig_prob_gain_pct = orig_prob_gain * 100
 mod_prob_gain_pct = mod_prob_gain * 100
 
 summary = f"""
-**What the figure shows**
+#### **What the figure shows**
 - Full-risk outcomes sprawl from ${orig_min:,.0f} to ${orig_max:,.0f}; the long right tail raises the mean (${orig_mean:,.0f}) well above the median (${orig_median:,.0f}).
+
 - The 50%-at-risk strategy compresses the range (${mod_min:,.0f} to ${mod_max:,.0f}), nudging the mean (${mod_mean:,.0f}) and median (${mod_median:,.0f}) much closer together.
+
 - Only {orig_prob_gain_pct:.1f}% of full-risk simulations finish above ${starting_balance:,}, versus {mod_prob_gain_pct:.1f}% when half the balance is protected each flip.
+
 - The histogram’s overlapping bars make the trade-off clear: the original game delivers rare but massive wins, while the modified plan clusters in a narrower, more predictable band.
 
-**Bottom line**
-- The chart confirms that cutting risk in half sacrifices extreme upside but dramatically improves the odds of walking away with more than the initial $30,000.
+#### **Bottom line**
+The chart confirms that cutting risk in half sacrifices extreme upside but dramatically improves the odds of walking away with more than the initial $30,000.
 """
 
-print(summary)
+display(Markdown(summary))
 ```
 
 ### 6) Briefly Explain Your Findings From The Previous Step in Light of A Concept Known as the "Kelly Criterion"
